# grpc-queue

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.org  conanfile.py
cmake/: grpc_extra.cmake
src/: CMakeLists.txt  Makefile  app.cpp  cmake_install.cmake  database.cpp  db_writer.cpp  db_writer_worker.cpp  main.cpp  worker.cpp
src/include/: app.h  concurrent_queue.h  database.h  db_writer.h  local_database.h  models.h  server.h  utils.h  uuid.h  worker.h
src/protos/: CMakeLists.txt  app_server.proto  my_service.proto
tests/: CMakeLists.txt  test.cpp
